# copilot_usage_analyser

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.schema.json  copilit_cli_otel.md  example_config.yaml  promp1-01.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.yaml
config/pricing/: business.yaml
docs/: 01-json-schema-design.md  02-parser-specification.md  03-report-generator-specification.md  04-product-functional-specification.md  05-technical-specification.md
src/copilot_usage_analyser/: __init__.py
src/copilot_usage_analyser/application/: __init__.py
src/copilot_usage_analyser/application/use_cases/: __init__.py  analyze_session.py  export_csv.py  generate_report.py
src/copilot_usage_analyser/cli/: __init__.py  main.py
src/copilot_usage_analyser/config/pricing/: business.yaml
src/copilot_usage_analyser/domain/: __init__.py
src/copilot_usage_analyser/domain/entities/: __init__.py  event.py  metrics.py  session.py
src/copilot_usage_analyser/domain/services/: __init__.py  cost_calculator.py  hotspot_detector.py  metrics_calculator.py
src/copilot_usage_analyser/domain/value_objects/: __init__.py  pricing_config.py
src/copilot_usage_analyser/infrastructure/: __init__.py
src/copilot_usage_analyser/infrastructure/adapters/: __init__.py  chatreplay_adapter.py  copilot_otel_adapter.py  otlp_adapter.py
src/copilot_usage_analyser/infrastructure/charts/: __init__.py  chart_generator.py
src/copilot_usage_analyser/infrastructure/config/: __init__.py  pricing_config_loader.py
src/copilot_usage_analyser/infrastructure/readers/: __init__.py  file_reader.py
tests/: __init__.py  conftest.py
tests/fixtures/sample_logs/: simple_session.jsonl
tests/integration/: test_analyze_session.py  test_chatreplay_adapter.py
tests/unit/domain/: test_cost_calculator.py  test_hotspot_detector.py  test_metrics_calculator.py
