[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-usage-analyser"
version = "0.1.0"
description = "A tool to analyze GitHub Copilot Agent Debug Logs and generate usage reports"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "wherka-ama"}
]
keywords = ["github", "copilot", "ai", "analytics", "usage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "click>=8.0",
    "rich>=13.0",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.5",
]
html = [
    "plotly>=5.0",
    "jinja2>=3.1",
]
pdf = [
    "weasyprint>=59.0",
]

[project.scripts]
cua = "copilot_usage_analyser.cli.main:cli"

[project.urls]
Homepage = "https://github.com/wherka-ama/copilot_usage_analyser"
Repository = "https://github.com/wherka-ama/copilot_usage_analyser"
Issues = "https://github.com/wherka-ama/copilot_usage_analyser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
copilot_usage_analyser = ["config/**/*.yaml"]

include_package_data = []

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/copilot_usage_analyser",
    "--cov-report=term-missing",
    "--cov-report=html",
]
